--- a/index.html
+++ b/index.html
@@ -5,13 +5,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/playstation-favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>PlayStation</title>
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Giochi<i class="bi bi-chevron-down mx-2"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Hardware<i class="bi bi-chevron-down mx-2"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Servizi<i class="bi bi-chevron-down mx-2"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Novità<i class="bi bi-chevron-down mx-2"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Fai Acquisti<i class="bi bi-chevron-down mx-2"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Supporto<i class="bi bi-chevron-down mx-2"></i></a>
+                </li>
+            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My PlayStation<i class="bi bi-chevron-down mx-2"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-secondary rounded-pill" href="#" role="button">Accedi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link ms-3" href="#"><i class="bi bi-search"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <!-- HEADER -->
+    <header>
+        <div class="hero row align-items-end p-5 text-white">
+            <div class="col-lg-4">
+                <img src="./img/returnal-hero-banner-logo.png" alt="" class="w-50">
+                <h1 class="my-4">Rompi il cerchio</h1>
+                <p class="my-4">
+                    Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
+                    thriller fantascientifico, disponibile in esclusiva su PS5.
+                </p>
+                <a href="#"><button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista
+                        ora</button></a>
+            </div>
+        </div>
+
+        <div class="hero-thumbs row justify-content-center p-5">
+            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt=""
+                        class="img-fluid"></a></div>
+            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt=""
+                        class="img-fluid"></a>
+            </div>
+            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt=""
+                        class="img-fluid"></a></div>
+            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt=""
+                        class="img-fluid"></a>
+            </div>
+            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt=""
+                        class="img-fluid"></a></div>
+            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt=""
+                        class="img-fluid"></a>
+            </div>
+        </div>
+
+    </header>
+
+    <!-- MAIN -->
+    <main>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+
+    </footer>
 
 </body>
 
