--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
             <ul class="navbar-nav">
@@ -61,8 +61,8 @@
 
 
     <!-- HEADER -->
-    <header>
-        <div class="hero row align-items-end p-5 text-white">
+    <header class="container-fluid mt-5 pt-5">
+        <section class="hero row align-items-end p-5 text-white">
             <div class="col-lg-4">
                 <img src="./img/returnal-hero-banner-logo.png" alt="" class="w-50">
                 <h1 class="my-4">Rompi il cerchio</h1>
@@ -73,31 +73,46 @@
                 <a href="#"><button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista
                         ora</button></a>
             </div>
-        </div>
+        </section>
 
-        <div class="hero-thumbs row justify-content-center p-5">
-            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt=""
+        <section class="hero-thumbs row justify-content-center p-5">
+            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
-            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt=""
-                        class="img-fluid"></a>
+            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+                        alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt=""
+            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
-            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt=""
-                        class="img-fluid"></a>
+            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+                        alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt=""
+            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
-            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt=""
-                        class="img-fluid"></a>
+            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+                        alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-        </div>
+        </section>
 
     </header>
 
     <!-- MAIN -->
-    <main>
-
+    <main class="container">
+        <section class="ps5-explore row justify-content-center align-items-center text-center p-5">
+            <div class="col-lg-12">
+                <p class="mb-0 text-main-blue">PLAY HAS NO LIMITS</p>
+                <h2 class="mb-4">Ecco la PlayStation 5</h2>
+                <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+            </div>
+        </section>
+        <div class="ps5-details row justify-content-center align-items-center">
+            <div class="col-lg-5">
+                <h2 class="mb-4">Console PlayStation 5</h2>
+                <p class="mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                <a href="#"><button type="button" class="btn bg-main-blue rounded-pill text-white">Maggiori
+                        informazioni</button></a>
+            </div>
+            <div class="col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid"></div>
+        </div>
     </main>
 
     <!-- FOOTER -->
