Finished ps5 section

--- a/index.html
+++ b/index.html
@@ -96,22 +96,49 @@
     </header>
 
     <!-- MAIN -->
-    <main class="container">
-        <section class="ps5-explore row justify-content-center align-items-center text-center p-5">
-            <div class="col-lg-12">
-                <p class="mb-0 text-main-blue">PLAY HAS NO LIMITS</p>
-                <h2 class="mb-4">Ecco la PlayStation 5</h2>
-                <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
-            </div>
-        </section>
-        <div class="ps5-details row justify-content-center align-items-center">
-            <div class="col-lg-5">
-                <h2 class="mb-4">Console PlayStation 5</h2>
-                <p class="mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
-                <a href="#"><button type="button" class="btn bg-main-blue rounded-pill text-white">Maggiori
-                        informazioni</button></a>
-            </div>
-            <div class="col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid"></div>
+    <main>
+        <div class="container">
+            <section class="ps5-explore row justify-content-center align-items-center text-center p-5">
+                <div class="col-lg-12">
+                    <p class="mb-0 text-main-blue">PLAY HAS NO LIMITS</p>
+                    <h2 class="mb-4">Ecco la PlayStation 5</h2>
+                    <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                </div>
+            </section>
+            <section class="ps5-details row justify-content-center align-items-center">
+                <div class="col-lg-5">
+                    <h2 class="mb-4">Console PlayStation 5</h2>
+                    <p class="mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                    <a href="#"><button type="button" class="btn bg-main-blue rounded-pill text-white">Maggiori
+                            informazioni</button></a>
+                </div>
+                <div class="col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid">
+                </div>
+            </section>
+        </div>
+        <div class="container-fluid">
+            <section class="ps5-items row justify-content-around align-items-center text-center p-5">
+                <div class="col py-3">
+                    <img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid px-5">
+                    <p>Console PS5</p>
+                </div>
+                <div class="col py-3">
+                    <img src="./img/joypad-thumb.png" alt="Controller wireless" class="img-fluid px-5">
+                    <p>Controller wireless DualSense</p>
+                </div>
+                <div class="col py-3">
+                    <img src="./img/headset-thumb.png" alt="Cuffie wireless" class="img-fluid px-5">
+                    <p>Cuffie wireless con microfono PULSE 3</p>
+                </div>
+                <div class="col py-3">
+                    <img src="./img/remote-thumb.png" alt="Telecomando" class="img-fluid px-5">
+                    <p>Telecomando Media</p>
+                </div>
+                <div class="col py-3">
+                    <img src="./img/camera-thumb.jpg" alt="Telecamera HD" class="img-fluid px-5">
+                    <p>Telecamera HD</p>
+                </div>
+            </section>
         </div>
     </main>
 
