Made it takes two section, added comments

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
     <!-- NAVBAR -->
+    <!-- MAIN NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
@@ -61,6 +62,7 @@
 
 
     <!-- HEADER -->
+    <!-- HERO -->
     <header class="container-fluid mt-5 pt-5">
         <section class="hero row align-items-end p-5 text-white">
             <div class="col-lg-4">
@@ -74,7 +76,7 @@
                         ora</button></a>
             </div>
         </section>
-
+        <!-- HERO THUMBS -->
         <section class="hero-thumbs row justify-content-center p-5">
             <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
@@ -97,6 +99,7 @@
 
     <!-- MAIN -->
     <main>
+        <!-- PS5 SECTION -->
         <div class="container">
             <section class="ps5-explore row justify-content-center align-items-center text-center p-5">
                 <div class="col-lg-12">
@@ -116,6 +119,7 @@
                 </div>
             </section>
         </div>
+        <!-- PS5 ITEMS -->
         <div class="container-fluid">
             <section class="ps5-items row justify-content-around align-items-center text-center p-5">
                 <div class="col py-3">
@@ -137,6 +141,21 @@
                 <div class="col py-3">
                     <img src="./img/camera-thumb.jpg" alt="Telecamera HD" class="img-fluid px-5">
                     <p>Telecamera HD</p>
+                </div>
+            </section>
+        </div>
+        <!-- IT TAKES TWO -->
+        <div class="container-fluid">
+            <section class="hero-2 row align-items-end p-5 text-white">
+                <div class="col-lg-4">
+                    <img src="./img/it-takes-two-logo.png" alt="" class="w-50">
+                    <h1 class="my-4">Un'avventura cooperativa selvaggia ti attende</h1>
+                    <p class="my-4">
+                        Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un
+                        gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
+                    </p>
+                    <a href="#"><button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista
+                            ora</button></a>
                 </div>
             </section>
         </div>
