--- a/index.html
+++ b/index.html
@@ -17,48 +17,53 @@
 
     <!-- NAVBAR -->
     <!-- MAIN NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Giochi<i class="bi bi-chevron-down mx-2"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Hardware<i class="bi bi-chevron-down mx-2"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Servizi<i class="bi bi-chevron-down mx-2"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Novità<i class="bi bi-chevron-down mx-2"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Fai Acquisti<i class="bi bi-chevron-down mx-2"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Supporto<i class="bi bi-chevron-down mx-2"></i></a>
-                </li>
-            </ul>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <section class="main-navbar fixed-top">
+        <div class="sony-navbar row justify-content-end align-items-center pe-1">
+            <div class="col-1"><a href="#"><img src="./img/sony_logo.svg" alt="" class="img-fluid"></a></div>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white p-0">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My PlayStation<i class="bi bi-chevron-down mx-2"></i></a>
+                        <a class="nav-link" href="#">Giochi<i class="bi bi-chevron-down mx-2"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-secondary rounded-pill" href="#" role="button">Accedi</a>
+                        <a class="nav-link" href="#">Hardware<i class="bi bi-chevron-down mx-2"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-3" href="#"><i class="bi bi-search"></i></a>
+                        <a class="nav-link" href="#">Servizi<i class="bi bi-chevron-down mx-2"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Novità<i class="bi bi-chevron-down mx-2"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Fai Acquisti<i class="bi bi-chevron-down mx-2"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Supporto<i class="bi bi-chevron-down mx-2"></i></a>
                     </li>
                 </ul>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My PlayStation<i class="bi bi-chevron-down mx-2"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-secondary rounded-pill" href="#" role="button">Accedi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link ms-3" href="#"><i class="bi bi-search"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </section>
 
 
     <!-- HEADER -->
