--- a/index.html
+++ b/index.html
@@ -159,9 +159,83 @@
                         Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un
                         gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
                     </p>
-                    <a href="#"><button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista
-                            ora</button></a>
+                    <a href="#">
+                        <button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista ora</button>
+                    </a>
                 </div>
+            </section>
+            <!-- NEW GAMES -->
+            <section class="new-games row justify-content-center bg-dark text-white p-5">
+                <div class="col-lg-12">
+                    <h2 class="fs-2">Nuove uscite</h2>
+                    <p class="fs-4">Giochi incredibili per PS4 e PS5 disponibili ora</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                        class="img-fluid">
+                    <p>Tony Hawk's Pro Skater 1+2</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                        class="img-fluid">
+                    <p>Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                        class="img-fluid">
+                    <p>Tony Hawk's Pro Skater 1+2</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                        class="img-fluid">
+                    <p>Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                        class="img-fluid">
+                    <p>Tony Hawk's Pro Skater 1+2</p>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                        class="img-fluid">
+                    <p>Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div class="col-lg-2">
+                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                        class="img-fluid">
+                    <p>Tony Hawk's Pro Skater 1+2</p>
+                </div>
+                <div class="col-lg-2">
+                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                        class="img-fluid">
+                    <p>Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div class="col-lg-2">
+                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                        class="img-fluid">
+                    <p>Tony Hawk's Pro Skater 1+2</p>
+                </div>
+                <div class="col-lg-2">
+                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                        class="img-fluid">
+                    <p>Crash Bandicoot 4: It's About Time</p>
+                </div>
+                <div class="col-lg-2">
+                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                        class="img-fluid">
+                    <p>Tony Hawk's Pro Skater 1+2</p>
+                </div>
+                <div class="col-lg-2">
+                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                        class="img-fluid">
+                    <p>Crash Bandicoot 4: It's About Time</p>
+                </div>
+            </section>
+        </div>
+        <!-- PS4 SECTION -->
+        <div class="container">
+            <section class="ps4-explore">
+
             </section>
         </div>
     </main>
