--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <!-- NAVBAR -->
+    <!------------------------ NAVBAR -------------------------->
     <!-- MAIN NAVBAR -->
     <section class="main-navbar fixed-top">
         <div class="sony-navbar row justify-content-end align-items-center pe-1">
@@ -66,7 +66,7 @@
     </section>
 
 
-    <!-- HEADER -->
+    <!----------------------------- HEADER ------------------------------>
     <!-- HERO -->
     <header class="container-fluid mt-5 pt-5">
         <section class="hero row align-items-end p-5 text-white">
@@ -102,7 +102,7 @@
 
     </header>
 
-    <!-- MAIN -->
+    <!------------------------------- MAIN ---------------------------------->
     <main>
         <!-- PS5 SECTION -->
         <div class="container">
@@ -234,8 +234,121 @@
         </div>
         <!-- PS4 SECTION -->
         <div class="container">
-            <section class="ps4-explore">
-
+            <section class="ps4-explore row justify-content-center align-items-center text-center p-5">
+                <div class="col-lg-12">
+                    <h2 class="mb-4">Esplora PlayStation 4</h2>
+                    <p>
+                        Giochi incredibili e intrattenimento senza fine. <br>
+                        Non c'è mai stato un momento migliore per giocare alla tua PS4.
+                    </p>
+                </div>
+            </section>
+            <section class="ps4-details row justify-content-center align-items-center">
+                <div class="col-lg-4">
+                    <div class="card border-0">
+                        <img src="./img/ps4-slim-homepage-image-block.jpg" class="card-img-top" alt="PlayStation 4">
+                        <div class="card-body">
+                            <h2 class="card-title mb-3">PlayStation 4</h2>
+                            <p class="card-text">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.
+                            </p>
+                            <a href="#" class="btn bg-main-blue rounded-pill text-white">Scopri di più</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card border-0">
+                        <img src="./img/double11-202010-tw-psvr.jpg" class="card-img-top" alt="PlayStation VR">
+                        <div class="card-body">
+                            <h2 class="card-title mb-3">PlayStation VR</h2>
+                            <p class="card-text">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                            <a href="#" class="btn bg-main-blue rounded-pill text-white">Scopri di più</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card border-0">
+                        <img src="./img/dualshock-4-listing-thumb.jpg" class="card-img-top" alt="Accessori">
+                        <div class="card-body">
+                            <h2 class="card-title mb-3">Accessori</h2>
+                            <p class="card-text">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
+                            </p>
+                            <a href="#" class="btn bg-main-blue rounded-pill text-white">Scopri di più</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- PS PLUS -->
+        <div class="container-fluid">
+            <section class="ps-plus-banner row align-items-center justify-content-between px-5">
+                <div class="col-lg-6">
+                    <img src="./img/ps-plus-logo.png" alt="" class="w-50 mb-3">
+                    <p>
+                        Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,
+                        sconti e altro ancora.
+                    </p>
+                    <a href="#" class="btn bg-lightgrey rounded-pill text-main-blue mt-3">Esplora PlayStation Plus</a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="PS Plus Games"
+                        class="img-fluid">
+                </div>
+            </section>
+        </div>
+        <!-- PS STORE -->
+        <div class="container">
+            <section class="ps-store row align-items-center justify-content-center text-center py-5">
+                <div class="col-lg-12 pb-5">
+                    <h2 class="mb-3">Nuovi sconti sul PlayStation Store</h2>
+                    <p>
+                        Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico
+                        posto.
+                    </p>
+                </div>
+                <div class="col-lg-4"><img src="./img/playstation-store-games-under-20-spotlight.jpg"
+                        alt="Giochi a meno" class="img-fluid"></div>
+                <div class="col-lg-4"><img src="./img/playstation-store-golden-week-sale-spotlight.jpg"
+                        alt="Settimana sconto" class="img-fluid"></div>
+                <div class="col-lg-4"><img src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to Play"
+                        class="img-fluid"></div>
+            </section>
+        </div>
+        <!-- PS NOW -->
+        <div class="container-fluid">
+            <section class="ps-now-banner row align-items-center justify-content-between text-white px-5">
+                <div class="col-lg-6">
+                    <img src="./img/ps-now-logo-two-column.png" alt="PlayStation Now logo" class="w-50 mb-3">
+                    <p>
+                        Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 o
+                        PC Windows, con nuovi titoli aggiunti ogni mese.
+                    </p>
+                    <a href="#" class="btn bg-lightgrey rounded-pill text-dark mt-3">Esplora PlayStation Now</a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="./img/ps-now-april-featured-image-block.png" alt="PS Plus Games" class="img-fluid">
+                </div>
+            </section>
+        </div>
+        <!-- SOCIAL MEDIAS -->
+        <div class="container">
+            <section class="socials row justify-content-center align-items-center text-center p-5">
+                <div class="col-lg-12 pb-5">
+                    <h3>Seguici sui social media</h3>
+                </div>
+                <div class="col-lg-6 row">
+                    <div class="col-lg-3">
+                        <a href="#"><img src="./img/twitter.jpg" alt="Twitter" class="img-fluid"></a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="#"><img src="./img/facebook.jpg" alt="Facebook" class="img-fluid"></a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="#"><img src="./img/instagram.jpg" alt="Instagram" class="img-fluid"></a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="#"><img src="./img/youtube.png" alt="YouTube" class="img-fluid"></a>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
