--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </p>
                 </div>
             </section>
-            <section class="ps4-details row justify-content-center align-items-center">
+            <section class="ps4-details row justify-content-center align-items-center py-5">
                 <div class="col-lg-4">
                     <div class="card border-0">
                         <img src="./img/ps4-slim-homepage-image-block.jpg" class="card-img-top" alt="PlayStation 4">
@@ -335,7 +335,7 @@
                 <div class="col-lg-12 pb-5">
                     <h3>Seguici sui social media</h3>
                 </div>
-                <div class="col-lg-6 row">
+                <div class="col-lg-6 row mb-5">
                     <div class="col-lg-3">
                         <a href="#"><img src="./img/twitter.jpg" alt="Twitter" class="img-fluid"></a>
                     </div>
@@ -354,8 +354,52 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="container-fluid bg-blue-footer text-white p-5">
+        <div class="row">
+            <div class="col-lg-6 p-3">
+                <div>
+                    <a href="#"><img src="./img/ps-footer.svg" alt="PlayStation Logo" class="w-15 pb-5"></a>
+                </div>
+                <i class="bi bi-globe pe-2"></i>
+                <p class="d-inline">Country / Region: Italy</p>
+            </div>
+            <div class="col-lg-6 row justify-content-center p-3">
+                <ul class="col-lg-4">
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Informativa sulla privacy e sui cookie</a></li>
+                    <li><a href="#">termini di utilizzo del sito web</a></li>
+                    <li><a href="#">PlayStation Studios</a></li>
+                    <li><a href="#">Termini Legali</a></li>
+                    <li><a href="#">Chi siamo</a></li>
+                    <li><a href="#">PlayStation e l'ambiente</a></li>
+                </ul>
+                <ul class="col-lg-4">
+                    <li><a href="#">Termini di servizio PSN</a></li>
+                    <li><a href="#">Termini di annullamento del PS Store</a></li>
+                    <li><a href="#">Avvertenze per la salute</a></li>
+                    <li><a href="#">Classificazioni per età</a></li>
+                    <li><a href="#">Termini d'uso del Software</a></li>
+                    <li><a href="#">Lavora con PlayStation</a></li>
+                    <li><a href="#">Mappa del sito</a></li>
+                </ul>
+                <ul class="col-lg-4">
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">YouTube</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-6 px-3 mb-5">
+                <a href="#"><img src="./img/sie-logo.svg" alt="SIE" class="w-25 pb-1"></a>
+                <p>
+                    Website 2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi
+                    commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi
+                    registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti
+                    riservati. <a href="#">Maggiori info</a>
+                </p>
+            </div>
 
+        </div>
     </footer>
 
 </body>
