made responsive nav & hero

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-0">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav show-only-lg">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Giochi<i class="bi bi-chevron-down mx-2"></i></a>
                     </li>
@@ -83,19 +83,19 @@
         </section>
         <!-- HERO THUMBS -->
         <section class="hero-thumbs row justify-content-center p-5">
-            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
+            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
-            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
                         alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
+            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
-            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
                         alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
-            <div class="col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
+            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal"
                         class="img-fluid"></a></div>
-            <div class="col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
+            <div class="col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
                         alt="Ratchet and Clank" class="img-fluid"></a>
             </div>
         </section>
@@ -114,13 +114,14 @@
                 </div>
             </section>
             <section class="ps5-details row justify-content-center align-items-center">
-                <div class="col-lg-5">
+                <div class="col-md-5 col-lg-5">
                     <h2 class="mb-4">Console PlayStation 5</h2>
                     <p class="mb-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
                     <a href="#"><button type="button" class="btn bg-main-blue rounded-pill text-white">Maggiori
                             informazioni</button></a>
                 </div>
-                <div class="col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid">
+                <div class=".col-md-6 col-lg-7"><img src="./img/playstation-5-thumb.png" alt="PlayStation 5"
+                        class="img-fluid">
                 </div>
             </section>
         </div>
