Made it respondive till "it takes two"

--- a/index.html
+++ b/index.html
@@ -83,21 +83,24 @@
             </div>
         </section>
         <!-- HERO THUMBS -->
-        <section class="row justify-content-center py-5 hero-thumbs">
-            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
+        <section class="row justify-content-center hero-thumbs">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
                         alt="Returnal" class="img-fluid"></a></div>
-            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
-                        alt="Ratchet and Clank" class="img-fluid"></a>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2"><a href="#"><img
+                        src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank"
+                        class="img-fluid"></a>
             </div>
-            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
                         alt="Returnal" class="img-fluid"></a></div>
-            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
-                        alt="Ratchet and Clank" class="img-fluid"></a>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2"><a href="#"><img
+                        src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank"
+                        class="img-fluid"></a>
             </div>
-            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2"><a href="#"><img src="./img/returnal-listing-thumb-01-ps5.jpg"
                         alt="Returnal" class="img-fluid"></a></div>
-            <div class="col-6 col-md-4 col-lg-2"><a href="#"><img src="./img/ratchet-and-clank-rift-apart-keyart.jpg"
-                        alt="Ratchet and Clank" class="img-fluid"></a>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2"><a href="#"><img
+                        src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank"
+                        class="img-fluid"></a>
             </div>
         </section>
 
@@ -128,24 +131,24 @@
         </div>
         <!-- PS5 ITEMS -->
         <div class="container-fluid">
-            <section class="row text-center py-3 ps5-items">
-                <div class="col-4 py-4">
+            <section class="row text-center justify-content-around align-items-stretch py-3 ps5-items">
+                <div class="col-4 col-md-2 px-4">
                     <img src="./img/playstation-5-thumb.png" alt="PlayStation 5" class="img-fluid">
                     <p class="show-only-md">Console PS5</p>
                 </div>
-                <div class="col-4 py-4">
+                <div class="col-4 col-md-2 px-4">
                     <img src="./img/joypad-thumb.png" alt="Controller wireless" class="img-fluid">
                     <p class="show-only-md">Controller wireless DualSense</p>
                 </div>
-                <div class="col-4 py-4">
+                <div class="col-4 col-md-2 px-4">
                     <img src="./img/headset-thumb.png" alt="Cuffie wireless" class="img-fluid">
                     <p class="show-only-md">Cuffie wireless con microfono PULSE 3</p>
                 </div>
-                <div class="col-4 py-4">
+                <div class="col-4 col-md-2 px-4">
                     <img src="./img/remote-thumb.png" alt="Telecomando" class="img-fluid">
                     <p class="show-only-md">Telecomando Media</p>
                 </div>
-                <div class="col-4 py-4">
+                <div class="col-4 col-md-2 px-4">
                     <img src="./img/camera-thumb.jpg" alt="Telecamera HD" class="img-fluid">
                     <p class="show-only-md">Telecamera HD</p>
                 </div>
@@ -153,16 +156,20 @@
         </div>
         <!-- IT TAKES TWO -->
         <div class="container-fluid">
-            <section class="row align-items-end pb-5 text-white hero-2">
-                <div class="col-lg-4">
-                    <img src="./img/it-takes-two-logo.png" alt="" class="w-75">
+            <section class="row align-items-end py-5 text-white hero-2">
+                <div class="col-sm-12 col-lg-6">
+                    <img src="./img/it-takes-two-logo.png" alt="" class="w-50">
+                </div>
+                <div class="col-sm-12 col-lg-12">
                     <h1 class="my-4">Un'avventura cooperativa selvaggia ti attende</h1>
                     <p class="my-4">
-                        Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un
+                        Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes
+                        Two, un
                         gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
                     </p>
                     <a href="#">
-                        <button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista ora</button>
+                        <button type="button" class="btn bg-orange-red rounded-pill text-white">Acquista
+                            ora</button>
                     </a>
                 </div>
             </section>
