--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row justify-content-end align-items-center me-1 sony-navbar">
             <div><a href="#"><img src="./img/sony_logo.svg" alt="" class="sony-bar-logo"></a></div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white p-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white text-dark p-0">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
                 <ul class="navbar-nav show-only-lg">
