Added shadow to navbar, fixed text center ps5-items

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!------------------------ NAVBAR -------------------------->
     <!-- MAIN NAVBAR -->
-    <section class="main-navbar fixed-top">
+    <section class="main-navbar shadow-sm fixed-top">
         <div class="row justify-content-end align-items-center me-1 sony-navbar">
             <div><a href="#"><img src="./img/sony_logo.svg" alt="" class="sony-bar-logo"></a></div>
         </div>
