--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!-- MAIN NAVBAR -->
     <section class="main-navbar shadow-sm fixed-top">
         <div class="row justify-content-end align-items-center me-1 sony-navbar">
-            <div><a href="#"><img src="./img/sony_logo.svg" alt="" class="sony-bar-logo"></a></div>
+            <div><a href="#"><img src="./img/sony_logo.svg" alt="Sony" class="sony-bar-logo"></a></div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-white text-dark p-0">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
+                <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt="PS Logo"></a>
                 <ul class="navbar-nav show-only-lg">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Giochi<i class="bi bi-chevron-down mx-2"></i></a>
@@ -71,7 +71,7 @@
     <header class="container-fluid mt-5 pt-5">
         <section class="row align-items-end text-white hero">
             <div class="col-lg-4">
-                <img src="./img/returnal-hero-banner-logo.png" alt="" class="w-60">
+                <img src="./img/returnal-hero-banner-logo.png" alt="Returnal" class="w-60">
                 <h1 class="my-4">Rompi il cerchio</h1>
                 <p class="my-4">
                     Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
@@ -160,7 +160,7 @@
         <div class="container-fluid">
             <section class="row align-items-end text-white py-5 hero-2">
                 <div class="col-sm-12 col-lg-6">
-                    <img src="./img/it-takes-two-logo.png" alt="" class="w-60">
+                    <img src="./img/it-takes-two-logo.png" alt="It Takes Two" class="w-60">
                 </div>
                 <div class="col-sm-12 col-lg-12">
                     <h1>Un'avventura cooperativa selvaggia ti attende</h1>
@@ -293,7 +293,7 @@
         <div class="container-fluid">
             <section class="row align-items-center justify-content-between ps-plus-banner">
                 <div class="col-md-6 col-lg-6">
-                    <img src="./img/ps-plus-logo.png" alt="" class="w-60 mb-4">
+                    <img src="./img/ps-plus-logo.png" alt="PS Plus" class="w-60 mb-4">
                     <p>
                         Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,
                         sconti e altro ancora.
@@ -347,17 +347,17 @@
                 <div class="col-lg-12 pb-5">
                     <h2>Seguici sui social media</h2>
                 </div>
-                <div class="col-lg-12 row">
-                    <div class="col-sm-3 col-6 col-lg-3">
+                <div class="col-lg-6 row">
+                    <div class="col-6 col-sm-3 col-lg-3">
                         <a href="#"><img src="./img/twitter.jpg" alt="Twitter" class="img-fluid mb-5"></a>
                     </div>
-                    <div class="col-sm-3 col-6 col-lg-3">
+                    <div class="col-6 col-sm-3 col-lg-3">
                         <a href="#"><img src="./img/facebook.jpg" alt="Facebook" class="img-fluid mb-5"></a>
                     </div>
-                    <div class="col-sm-3 col-6 col-lg-3">
+                    <div class="col-6 col-sm-3 col-lg-3">
                         <a href="#"><img src="./img/instagram.jpg" alt="Instagram" class="img-fluid mb-5"></a>
                     </div>
-                    <div class="col-sm-3 col-6 col-lg-3">
+                    <div class="col-6 col-sm-3 col-lg-3">
                         <a href="#"><img src="./img/youtube.png" alt="YouTube" class="img-fluid mb-5"></a>
                     </div>
                 </div>
