--- a/index.html
+++ b/index.html
@@ -182,64 +182,88 @@
                     <h3>Giochi incredibili per PS4 e PS5 disponibili ora</h3>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2 mb-4">
-                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
-                        class="img-fluid">
-                    <p>Tony Hawk's Pro Skater 1+2</p>
+                    <a href="#">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                            class="img-fluid">
+                        <p>Tony Hawk's Pro Skater 1+2</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2 mb-4">
-                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
-                        class="img-fluid">
-                    <p>Crash Bandicoot 4: It's About Time</p>
+                    <a href="#">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                            class="img-fluid">
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2 mb-4">
-                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
-                        class="img-fluid">
-                    <p>Tony Hawk's Pro Skater 1+2</p>
+                    <a href="#">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                            class="img-fluid">
+                        <p>Tony Hawk's Pro Skater 1+2</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2 mb-4">
-                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
-                        class="img-fluid">
-                    <p>Crash Bandicoot 4: It's About Time</p>
+                    <a href="#">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                            class="img-fluid">
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2 mb-4">
-                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
-                        class="img-fluid">
-                    <p>Tony Hawk's Pro Skater 1+2</p>
+                    <a href="#">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                            class="img-fluid">
+                        <p>Tony Hawk's Pro Skater 1+2</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2 mb-4">
-                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
-                        class="img-fluid">
-                    <p>Crash Bandicoot 4: It's About Time</p>
+                    <a href="#">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                            class="img-fluid">
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
-                        class="img-fluid">
-                    <p>Tony Hawk's Pro Skater 1+2</p>
+                    <a href="#">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                            class="img-fluid">
+                        <p>Tony Hawk's Pro Skater 1+2</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
-                        class="img-fluid">
-                    <p>Crash Bandicoot 4: It's About Time</p>
+                    <a href="#">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                            class="img-fluid">
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
-                        class="img-fluid">
-                    <p>Tony Hawk's Pro Skater 1+2</p>
+                    <a href="#">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                            class="img-fluid">
+                        <p>Tony Hawk's Pro Skater 1+2</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
-                        class="img-fluid">
-                    <p>Crash Bandicoot 4: It's About Time</p>
+                    <a href="#">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                            class="img-fluid">
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
-                        class="img-fluid">
-                    <p>Tony Hawk's Pro Skater 1+2</p>
+                    <a href="#">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks Pro Skater"
+                            class="img-fluid">
+                        <p>Tony Hawk's Pro Skater 1+2</p>
+                    </a>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
-                        class="img-fluid">
-                    <p>Crash Bandicoot 4: It's About Time</p>
+                    <a href="#">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot 4"
+                            class="img-fluid">
+                        <p>Crash Bandicoot 4: It's About Time</p>
+                    </a>
                 </div>
             </section>
         </div>
